# SDN-Vehicle

./: README.md  pyproject.toml
configs/: default.yaml
outputs/: evaluation_summary.json  evaluation_summary_before_deadline_tuning.json  simulation_172_clients.json
outputs/checkpoints/: scenario_20_ppo.pt  scenario_50_ppo.pt
outputs/training/: scenario_20.csv  scenario_50.csv
vecsim/: __init__.py  cli.py  config.py  environment.py  evaluation.py  hexgrid.py  kalman.py  mobility.py  network.py  placement.py  plotting.py  ppo.py  video.py
